[tool.poetry]
name = "my-xxd"
version = "0.1.0"
description = ""
authors = ["eshom <48328872+eshom@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
